--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         are less likely to be able to take measures against disasters before or after the fact— most
                         importantly because they are less likely to be able to afford measures such as earthquake
                         insurance, earthquake safety audits, or renovations.</p>
+                        <p>In an attempt to get a more accurate reading of socioeconomic status in the city on a granular basis, the socioeconomic status data has been weighted by another index of wealth disparity per municipality in Istanbul.</p>
                     <p>While earthquake safety regulations are present in Turkey, their implementation is spotty on the
                         government/private side, forcing many to take their own initiative towards earthquake safety.
                         This map provides insight not only into which municipalities of Istanbul would most benefit from
